infrastructure/mariadb-xiaowen-v2/maxscale-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: maxscale-xiaowen
spec:
  parentRefs:
    - name: traefik-internal
      namespace: networking
  hostnames:
    - "xiaomaxscale.mmontes-internal.duckdns.org"
  rules:
    - backendRefs:
        - kind: Service
          name: maxscale-xiaowen-gui
          namespace: media
          port: 8989
